# docs/swagger.yaml
@@ -17,6 +17,8 @@ definitions:
     properties:
       base_fee_per_blob_gas:
         type: string
+      base_fee_per_blob_gas_gwei:
+        type: string
       blob_gas_used:
         type: integer
       blob_index:
@@ -25,6 +27,8 @@ definitions:
         type: integer
       block_number:
         type: integer
+      block_url:
+        type: string
       confirmed:
         type: boolean
       fee_cap_headroom_percent:
@@ -33,9 +37,13 @@ definitions:
         type: string
       from_address:
         type: string
+      from_address_url:
+        type: string
       max_cost_wei:
         type: string
       max_fee_per_blob_gas:
+        type: string
+      max_fee_per_blob_gas_gwei:
         type: string
       network_id:
         type: integer
@@ -47,7 +55,11 @@ definitions:
         type: string
       tip_per_blob_gas:
         type: string
+      tip_per_blob_gas_gwei:
+        type: string
       total_cost_eth:
+        type: string
+      transaction_url:
         type: string
       tx_hash:
         type: string
@@ -59,6 +71,8 @@ definitions:
       available_blobs:
         type: integer
       blob_base_fee:
+        type: string
+      blob_base_fee_gwei:
         type: string
       blob_count:
         type: integer
@@ -150,6 +164,8 @@ definitions:
         $ref: '#/definitions/api.BlobParamsResponse'
       current_base_fee:
         type: string
+      current_base_fee_gwei:
+        type: string
       current_excess_gas:
         type: integer
       current_utilization:
@@ -161,6 +177,8 @@ definitions:
       network_name:
         type: string
       predicted_next_fee:
+        type: string
+      predicted_next_fee_gwei:
         type: string
       recent_blocks:
         items:
